# gitara

./: .gitignore  Cargo.toml  ISSUES.md  README.md
.github/workflows/: ci.yml
docs/: implementation.md
src/: app.rs  desktop_install.rs  fonts.rs  graph_layout.rs  logo.rs  main.rs  persist.rs  theme.rs  ui.rs
src/git/: diff.rs  log.rs  mod.rs  ops.rs  refs.rs  status.rs  test_fixture.rs
src/mock/: mod.rs
src/model/: commit.rs  diff.rs  mod.rs  reflog.rs  repo.rs
src/views/: context_menu.rs  diff_view.rs  graph.rs  inspector.rs  mod.rs  sidebar.rs  statusbar.rs  titlebar.rs  toolbar.rs
src/views/modals/: add_remote.rs  branch.rs  cherry_pick.rs  commit.rs  fetch.rs  merge.rs  mod.rs  push.rs  rebase.rs  rename_branch.rs  reset.rs  tag.rs
src/widgets/: clickable_box.rs  flat_button.rs  flow.rs  graph_gutter.rs  mod.rs
tools/: ui-screenshot.sh
