[package]
name = "gitara"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
# ── UI ────────────────────────────────────────────────────────────────
# Xilem is pre-1.0; pin exactly and upgrade deliberately.
# Check https://crates.io/crates/xilem for the latest; this handoff was
# written against the 0.3-era API.
xilem   = "0.4"
masonry = "0.4"      # custom-widget layer used by xilem
vello   = "0.6"      # GPU vector renderer
parley  = "0.6"      # text layout
swash   = "0.2"      # glyph rasterization (pulled in transitively, pinned for stability)
fontique = "0.6"     # native font discovery (Core Text / DirectWrite / fontconfig)

# ── Color ─────────────────────────────────────────────────────────────
palette = "0.7"      # OKLCH → sRGB conversion

# ── Git ───────────────────────────────────────────────────────────────
gix = { version = "0.83", features = [
    "max-performance",
    "blocking-network-client",
    "revision",
    "blob-diff",
] }
# vendored-libgit2 statically links libgit2 from source so we don't
# depend on the system having libgit2.so.1.9 at runtime — that broke
# tests on this machine when bumping git2 0.19 → 0.20 since the
# system libgit2 was older than what 0.20 expects.
git2 = { version = "0.20", features = ["vendored-libgit2"] }

# Phase-1+ scaffolding (similar / syntect for inline diff highlighting,
# tokio for async work, notify for filesystem watching, ignore + globset
# for path-spec matching, thiserror for typed errors) was removed —
# none of those features have actually shipped yet, the deps were
# unused, and they pulled large transitive subtrees. Add them back
# when the feature that needs them lands.

# ── Persistence ───────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"

# ── Custom widgets ────────────────────────────────────────────────────
# Transitive already, but we depend on them directly for our custom
# masonry widget implementations. Pinned to the versions masonry 0.3
# pulls in to avoid duplicate copies in the graph.
accesskit = "0.21"
smallvec  = "1"

# ── Misc ──────────────────────────────────────────────────────────────
# Pure-Rust 2D vector rasterizer — used once at startup to render the
# window-icon (taskbar/dock) from vector primitives. Keeps the icon
# crisp at any DPI without bundling a PNG.
tiny-skia = "0.12"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde", "formatting", "macros"] }

# ── Platform ──────────────────────────────────────────────────────────
[target.'cfg(unix)'.dependencies]
libc = "0.2"          # _exit on shutdown to dodge the wgpu/vello segfault


[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 1        # keeps the UI responsive during dev; debug info preserved
